chat overflow issue fix

--- a/App/misc/chat/chat.less
+++ b/App/misc/chat/chat.less
@@ -1,5 +1,5 @@
 chat {
-  position: relative;
+  position: absolute;
 
   display: flex;
   flex-direction: column;
